# fullscreen-reminder

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
innosetup/: ModPath.iss  cert.cer  main.iss
