[project]
name = "fullscreen-reminder"
version = "0.1.0"
description = "a command line tool to remind you"
requires-python = "~=3.8"
dependencies = [
    "PyQt5==5.15.11",
    "PyQt5-Qt5==5.15.2",
    "pyautogui",
    "pyqt5-stubs==5.15.6.0",
]

[dependency-groups]
dev = [
    "nuitka>=2.6.9",
    "pyinstaller>=6.13.0",
]
